finished lab 6
