# receiver/app.py
@@ -5,6 +5,9 @@ import httpx
 import time
 import yaml
 import logging
+import json
+from pykafka import KafkaClient
+import datetime
 
 with open('app_conf.yml', 'r') as f:
     CONFIG = yaml.safe_load(f.read())
@@ -15,45 +18,48 @@ with open('log_conf.yml', 'r') as f:
 
 logger = logging.getLogger('basicLogger')
 
+client = KafkaClient(hosts=f"{CONFIG['events']['hostname']}:{CONFIG['events']['port']}")
+topic = client.topics[str.encode(CONFIG['events']['topic'])]
+producer = topic.get_sync_producer()
+
 def gen_uuid():
     return time.time_ns()
 
 def post_cars_odometers(body):
-    '''
-    Add an entry in the db for the body.VIN 
-
-    OR
-
-    Copare the body.odometer (int) to the next service interval for body.VIN
-    If the interval has been met or supassed, book an apointment
-    else do nothing
-    '''
     body["trace_id"] = gen_uuid()
     logger.info(f"Received event odometer with a trace id of {body['trace_id']}")
 
-    headers = {"Content-Type" : "application/json"}
-    res = httpx.post(CONFIG["events"]["odos"]["url"], json=body, headers=headers)
-    logger.info(f"Response for event odometer (id: {body['trace_id']}) has status {res.status_code}")
+    # headers = {"Content-Type" : "application/json"}
+    # res = httpx.post(CONFIG["events"]["odos"]["url"], json=body, headers=headers)
+    # logger.info(f"Response for event odometer (id: {body['trace_id']}) has status {res.status_code}")
 
+    msg = { "type": "odometer_report",
+        "datetime": datetime.datetime.now().strftime("%Y-%m-%dT%H:%M:%S"),
+        "payload": body
+        }
+    msg_str = json.dumps(msg)
+    producer.produce(msg_str.encode('utf-8'))
+    logger.info(f"Event with trace_id:{body['trace_id']} sucessfully added to que")
 
-    return NoContent, res.status_code
+    return NoContent, 201
 
 def post_cars_jobs(body):
-    '''
-    Add an entry to the db for the job copleted body.job_id and body.description on car body.VIN
-    include the body.bay_id
-    
-    alert the owner 
-    '''
     body["trace_id"] = gen_uuid()
     logger.info(f"Received event job with a trace id of {body['trace_id']}")
 
-    headers = {"Content-Type" : "application/json"}
-    res = httpx.post(CONFIG["events"]["jobs"]["url"], json=body, headers=headers)
-    logger.info(f"Response for event job (id: {body['trace_id']}) has status {res.status_code}")
+    # headers = {"Content-Type" : "application/json"}
+    # res = httpx.post(CONFIG["events"]["jobs"]["url"], json=body, headers=headers)
+    # logger.info(f"Response for event job (id: {body['trace_id']}) has status {res.status_code}")
+    
+    msg = { "type": "job_completion",
+        "datetime": datetime.datetime.now().strftime("%Y-%m-%dT%H:%M:%S"),
+        "payload": body
+        }
+    msg_str = json.dumps(msg)
+    producer.produce(msg_str.encode('utf-8'))
+    logger.info(f"Event with trace_id:{body['trace_id']} sucessfully added to que")
 
-
-    return NoContent, res.status_code
+    return NoContent, 201
 
 
 app = connexion.FlaskApp(__name__, specification_dir='', strict_validation=True)
